<resources>
  <string name="general_preferences" translatable="false">speed_preferences</string>
  <string name="log_preferences" translatable="false">log_preferences</string>
  <string name="alarm_preferences" translatable="false">alarm_preferences</string>
  <string name="watch_preferences" translatable="false">watch_preferences</string>
  <string name="wheel_settings" translatable="false">wheel_settings</string>
  <string name="speech_preferences" translatable="false">speech_preferences</string>
  <string name="speech_messages_preferences" translatable="false">speech_messages_preferences</string>
  <string name="livemap_preferences" translatable="false">livemap_preferences</string>
  <string name="wheel_max_speed" translatable="false">wheel_max_speed</string>
  <string name="pedals_mode" translatable="false">pedals_mode</string>
  <string name="light_mode" translatable="false">light_mode</string>
  <string name="strobe_mode" translatable="false">strobe_mode</string>
  <string name="led_mode" translatable="false">led_mode</string>
  <string name="start_calibration" translatable="false">start_calibration</string>
  <string name="alarm_mode" translatable="false">alarm_mode</string>
  <string name="gotway_voltage" translatable="false">gotway_voltage</string>
  <string name="auto_log" translatable="false">auto_log</string>
  <string name="auto_upload" translatable="false">auto_upload</string>
  <string name="log_location_data" translatable="false">log_location_data</string>
  <string name="use_gps" translatable="false">use_gps</string>
  <string name="use_mi" translatable="false">use_mi</string>
  <string name="use_f" translatable="false">use_f</string>
  <string name="use_ratio" translatable="false">use_ratio</string>
  <string name="reset_top_speed" translatable="false">reset_top_speed</string>
  <string name="reset_user_distance" translatable="false">reset_user_distance</string>
  <string name="last_mac" translatable="false">last_mac</string>
  <string name="about" translatable="false">about</string>
  <string name="speech_msg_interval" translatable="false">speech_msg_rate</string>
  <string name="speech_rate" translatable="false">speech_rate</string>
  <string name="speech_pitch" translatable="false">speech_pitch</string>
  <string name="speech_only_when_moving" translatable="false">speech_only_when_moving</string>
  <string name="speech_msg_mode" translatable="false">speech_msg_mode</string>
  <string name="speech_enable_on_startup" translatable="false">speech_enable_on_startup</string>
  <string name="speech_messages_speed" translatable="false">speech_messages_speed</string>
  <string name="speech_messages_top_speed" translatable="false">speech_messages_top_speed</string>
  <string name="speech_messages_avg_speed" translatable="false">speech_messages_avg_speed</string>
  <string name="speech_messages_avg_riding_speed" translatable="false">speech_messages_avg_riding_speed</string>
  <string name="speech_messages_distance" translatable="false">speech_messages_distance</string>
  <string name="speech_messages_battery" translatable="false">speech_messages_battery</string>
  <string name="speech_messages_phone_battery" translatable="false">speech_messages_phone_battery</string>
  <string name="speech_messages_voltage" translatable="false">speech_messages_voltage</string>
  <string name="speech_messages_current" translatable="false">speech_messages_current</string>
  <string name="speech_messages_power" translatable="false">speech_messages_power</string>
  <string name="speech_messages_temperature" translatable="false">speech_messages_temperature</string>
  <string name="speech_messages_time" translatable="false">speech_messages_time</string>
  <string name="speech_messages_time_from_start" translatable="false">speech_messages_time_from_start</string>
  <string name="speech_messages_time_in_motion" translatable="false">speech_messages_time_in_motion</string>
  <string name="speech_messages_battery_low_level" translatable="false">speech_messages_battery_low_level</string>
  <string name="speech_messages_phone_battery_low_level" translatable="false">speech_messages_phone_battery_low_level</string>
  <string name="speech_messages_weather" translatable="false">speech_messages_weather</string>
  <string name="show_when_locked" translatable="false">show_when_locked</string>
  <string name="speech_gps_bt_status" translatable="false">speech_gps_bt_status</string>
  <string name="speed_correction" translatable="false">speed_correction</string>
  <string name="dist_correction" translatable="false">dist_correction</string>
  <string name="speech_use_a2dp_only" translatable="false">speech_use_a2dp_only</string>
  <string name="dont_reset_data" translatable="false">dont_reset_data</string>
  <string name="speech_focus" translatable="false">speech_focus</string>
  <string name="flic_preferences" translatable="false">flic_preferences</string>
  <string name="optimized_battery_level" translatable="false">optimized_battery_level</string>
  <string name="sign_up" translatable="false">sign_up</string>
  <string name="sign_in_out" translatable="false">sign_in_out</string>
  <string name="enable_pip" translatable="false">enable_pip</string>
  <string name="gauge_preferences" translatable="false">gauge_preferences</string>
  <string name="lang" translatable="false">lang</string>
  <string name="icon_watch">Watch Icon</string>
  <string name="icon_logging">Logging Icon</string>
  <string name="icon_connection">Connection Icon</string>
  <string name="icon_speech">Voice Icon</string>
  <string name="speech_messages_weather_title">Weather conditions</string>
  <string name="speech_messages_weather_summary">Available when tour is being tracked</string>
  <string name="speech_messages_time_in_motion_title">Time in motion</string>
  <string name="speech_messages_time_from_start_title">Time from start</string>
  <string name="speech_messages_temperature_title">Temperature</string>
  <string name="speech_messages_time_title">Current time</string>
  <string name="speech_messages_speed_title">Current speed</string>
  <string name="speech_messages_top_speed_title">Top speed</string>
  <string name="speech_messages_avg_speed_title">Average speed</string>
  <string name="speech_messages_avg_riding_speed_title">Average riding speed</string>
  <string name="speech_messages_distance_title">Distance</string>
  <string name="speech_messages_battery_title">Battery level</string>
  <string name="speech_messages_phone_battery_title">Phone battery level</string>
  <string name="speech_messages_voltage_title">Voltage</string>
  <string name="speech_messages_current_title">Current</string>
  <string name="speech_messages_power_title">Power</string>
  <string name="speech_messages_warning_messages_title">Warning messages</string>
  <string name="speech_messages_battery_low_level_title">Low battery</string>
  <string name="speech_messages_phone_battery_low_level_title">Low phone battery</string>
  <string name="speech_enable_on_startup_title">Turn on voice messages on startup</string>
  <string name="speech_rate_title">Speech rate</string>
  <string name="speech_pitch_title">Speech pitch</string>
  <string name="speech_only_when_moving_title">Messages only in motion</string>
  <string name="speech_msg_mode_title">Triggering</string>
  <string name="speech_msg_interval_title">Interval</string>
  <string name="speech_messages_preferences_title">Message configuration</string>
  <string name="last_mac_title">Edit MAC address</string>
  <string name="about_title">About EUC World</string>
  <string name="reset_user_distance_title">Reset user distance</string>
  <string name="reset_top_speed_title">Reset top speed</string>
  <string name="wheel_settings_title">Wheel settings</string>
  <string name="watch_preferences_title">Watch settings</string>
  <string name="speech_preferences_title">Voice settings</string>
  <string name="livemap_preferences_title">Tour tracking settings</string>
  <string name="alarm_preferences_title">Alarm settings</string>
  <string name="log_preferences_title">Log settings</string>
  <string name="general_preferences_title">General settings</string>
  <string name="use_mi_title">Speed and distance in miles</string>
  <string name="use_mi_summary">Display speed and distance in miles rather than kilometers</string>
  <string name="use_f_title">Temperature in ℉</string>
  <string name="use_f_summary">Display temperature in degrees Fahrenheit rather than Celsius</string>
  <string name="light_mode_title">Light Mode</string>
  <string name="alarm_mode_title">Alarm Mode</string>
  <string name="alarm_mode_summary">Alarm settings</string>
  <string name="pedals_mode_title">Pedal Mode</string>
  <string name="pedals_mode_summary">Soft/Medium/Hard</string>
  <string name="wheel_max_speed_title">Wheel speed limit</string>
  <string name="wheel_max_speed_summary">Tiltback speed, 0=disabled</string>
  <string name="start_calibration_title">Calibration</string>
  <string name="use_ratio_title">My Wheel is a Gotway MCM</string>
  <string name="use_ratio_summary">If your wheel is Gotway MCM, and it shows wrong speed, distance and others parameters, this should solve the problem</string>
  <string name="gotway_voltage_title">Battery voltage</string>
  <string name="gotway_voltage_summary">67V/84V/100V</string>
  <string name="light_mode_summary">On/Off/Auto</string>
  <string name="strobe_mode_title">Strobe Mode</string>
  <string name="strobe_mode_summary">On/Off</string>
  <string name="led_mode_title">Led Mode</string>
  <string name="led_mode_summary">On/Off</string>
  <string name="wheel_max_speed_summary_kingsong">Tiltback speed</string>
  <string name="auto_log_title">Auto Log</string>
  <string name="auto_log_summary">Start logging automatically when a wheel is connected</string>
  <string name="auto_upload_title">Auto Upload Logs</string>
  <string name="auto_upload_summary">Automatically upload log files to euc.world</string>
  <string name="log_location_data_title">Log location</string>
  <string name="log_location_data_summary">Include location data in logs</string>
  <string name="use_gps_title">Use GPS for location</string>
  <string name="use_gps_summary">Use GPS for location rather than network provider. GPS is more accurate but may consume more battery power</string>
  <string name="show_when_locked_title">Show when locked</string>
  <string name="show_when_locked_summary">Show main window even if the screen is locked</string>
  <string name="speech_gps_bt_status_title">GPS &amp; BT status messages</string>
  <string name="speed_correction_title">Wheel speed correction</string>
  <string name="dist_correction_title">Wheel distance correction</string>
  <string name="speech_use_a2dp_only_title">Messages only over BT</string>
  <string name="dont_reset_data_title">Don\'t reset wheel data</string>
  <string name="dont_reset_data_summary">Check if you don\'t want to reset wheel data on manual reconnection</string>
  <string name="speech_focus_title">Focus</string>
  <string name="flic_preferences_title">Flic settings</string>
  <string name="optimized_battery_level_title">Realistic battery level</string>
  <string name="optimized_battery_level_summary">Show more realistic battery level with additional safety margin</string>
  <string name="sign_up_title">Sign up</string>
  <string name="sign_in_title">Sign in</string>
  <string name="enable_pip_title">Enable PIP</string>
  <string name="enable_pip_summary">If application is switched to background, it will be displayed in \"picture-in-picture\" mode</string>
  <string name="icon_livemap">Livemap Icon</string>
  <string name="gauge_preferences_title">Gauge settings</string>
  <string name="lang_title">Language</string>
  <string name="use_ft" translatable="false">use_ft</string>
  <string name="use_ft_title">Altitude in feet</string>
  <string name="use_ft_summary">Display altitude in feet rather than meters</string>
</resources>