<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sample="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:key="@string/light_mode"
        android:title="@string/light_mode_title"
        android:defaultValue="0"
		android:enabled="true"
        android:entries="@array/light_mode_gw"
        android:entryValues="@array/light_mode_values"
        android:summary="Off/On/Strobe" />	
			
			
    <ListPreference
        android:key="@string/alarm_mode"
        android:title="@string/alarm_mode_title"
        android:defaultValue="0"
		android:enabled="true"
        android:entries="@array/alarm_mode_gw"
        android:entryValues="@array/alarm_mode_values"
        android:summary="@string/alarm_mode_summary" />
	
    <ListPreference
        android:key="@string/pedals_mode"
        android:title="@string/pedals_mode_title"
        android:defaultValue="1"
        android:entries="@array/pedals_mode"
        android:entryValues="@array/pedals_mode_values"
        android:summary="@string/pedals_mode_summary" />


    <com.pavelsikun.seekbarpreference.SeekBarPreference
        android:key="@string/wheel_max_speed"
        android:title="@string/wheel_max_speed_title"
        android:summary="@string/wheel_max_speed_summary"
        android:defaultValue="25"
		android:enabled="true"
        sample:msbp_minValue="0"
        sample:msbp_maxValue="50"
        sample:msbp_interval="1"
		sample:msbp_type="speed"
		sample:msbp_measurementUnit="km/h"
		sample:msbp_measurementUnitImperial="mph"
        sample:msbp_dialogEnabled="true"/>

		
	<Preference
        android:key="@string/start_calibration"
		android:enabled="true"
        android:title="@string/start_calibration_title"/>
		
	<CheckBoxPreference
        android:key="@string/use_ratio"
        android:title="@string/use_ratio_title"
        android:summary="@string/use_ratio_summary" />

	<ListPreference
		android:key="@string/gotway_voltage"
		android:title="@string/gotway_voltage_title"
		android:enabled="true"
		android:defaultValue="0"
		android:entries="@array/gotway_voltage"
		android:entryValues="@array/gotway_voltage_values"
		android:summary="@string/gotway_voltage_summary" />


</PreferenceScreen>