<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sample="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:key="@string/light_mode"
        android:title="@string/light_mode_title"
        android:defaultValue="0"
		android:enabled="true"
        android:entries="@array/light_mode_ks"
        android:entryValues="@array/light_mode_values"
        android:summary="@string/light_mode_summary" />
		
	<ListPreference
        android:key="@string/strobe_mode"
        android:title="@string/strobe_mode_title"
		android:enabled="true"
        android:defaultValue="0"
        android:entries="@array/strobe_mode_ks"
        android:entryValues="@array/strobe_mode_values"
        android:summary="@string/strobe_mode_summary" />

	<ListPreference
        android:key="@string/led_mode"
        android:title="@string/led_mode_title"
		android:enabled="true"
        android:defaultValue="1"
        android:entries="@array/led_mode"
        android:entryValues="@array/led_mode_values"
        android:summary="@string/led_mode_summary" />

		
	<ListPreference
        android:key="@string/pedals_mode"
        android:title="@string/pedals_mode_title"
        android:defaultValue="1"
        android:entries="@array/pedals_mode"
        android:entryValues="@array/pedals_mode_values"
        android:summary="@string/pedals_mode_summary" />

    <com.pavelsikun.seekbarpreference.SeekBarPreference
        android:key="@string/wheel_max_speed"
        android:title="@string/wheel_max_speed_title"
        android:summary="@string/wheel_max_speed_summary_kingsong"
		android:enabled="true"
        android:defaultValue="25"
        sample:msbp_minValue="1"
        sample:msbp_maxValue="50"
        sample:msbp_interval="1"
		sample:msbp_type="speed"
		sample:msbp_measurementUnit="km/h"
		sample:msbp_measurementUnitImperial="mph"
        sample:msbp_dialogEnabled="true"/>
		
</PreferenceScreen>